# book

./: .gitignore  CMakeLists.txt  CMakeLists_copy.txt
docs/: bash-commands  bash-commands.list  c++.docx  clion-settings.lst  g++use  g++use.lst  git-workflow  imports.cpp  note.txt  notes.cpp  temp.cpp
workspace/: main.cpp  main.s
workspace/boost_examples/: multi_index.cpp  tokenizer.cpp
workspace/containers/: algorithms.h  any.h  array1.h  array2.h  array3.h  iterators.h  list.h  pair.h
workspace/gtests/: gtest_array.cpp  gtest_clock.cpp  gtest_string.cpp  test1.cpp
workspace/internal/: input.h  io.h  print.h  time.cpp  time.h  utility.h
workspace/internal_utilities/: print.hpp  print_impl.hpp  time.cpp
workspace/meta/: fibonacci.h  list_int.h  list_int_examples.cpp  sfinae.h  si.h
workspace/patterns/: map_for_intersect.h  singleton.h
workspace/study/: arrays-study.cpp  arrays-study.h  arrays.cpp  arrays.h  list-of-vector-iterator.h  math.cpp  matrix.h  memory.cpp  memory.h  pointer.h  rational.h  scoped_ptr.h  shared_ptr.h  simple_constructions.cpp  stack-overflow.cpp  stl_examples.cpp  strings.cpp  strings.h
workspace/study/classes/: character_actions.cpp  character_actions.h  cloneable.h  compare.h  person.h
workspace/study/questions/: const_vs_static_cast.h
workspace/study/tasks/: access_to_protected_constructor.cpp  evaluate_expression.cpp  field_and_method_pointers.cpp  substrings1.cpp  substrings2.cpp
workspace/study/tasks/math/: invert-numbers-is-squares.cpp
workspace/tasks/: braces.cpp  enumeration.cpp  min_path.cpp  partition.cpp  permutation.cpp
workspace/tests/: test_characters.cpp  test_characters.h
workspace/threads/: examples  integral.cpp  map_reduce_future.h  map_reduce_threads.h
workspace/trainings/: character_actions.h  macros.cpp  person.h  questions.cpp
workspace/types/: noexcept.h  types.cpp
